assets/css/style.css
body {
    font-family: "Roboto", sans-serif;
    font-optical-sizing: auto;
    font-weight: 400;
    /* normal weight */
    font-style: normal;
}
body {
    background-image: linear-gradient(180deg, #ffffff 0%, #eeebff 69.79%, #ebe8ff 99.99%, #e1deff 100%);
}
.roboto-light {
    font-weight: 300;
}

.roboto-regular {
    font-weight: 400;
}

.roboto-medium {
    font-weight: 500;
}

.roboto-bold {
    font-weight: 700;
}

* {

    margin: 0;
    padding: 0;
    box-sizing: border-box;
}



header .container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 20px 10px;
}

header .logo img {
    width: 186.35px;
    height: 36px;
}

header .nav-menu ul {
    display: flex;
    gap: 20px;
}

header .nav-menu ul li {
    list-style: none;
}


h3.banner-heading {
    font-size: 55px;
    line-height: 65px;
    text-align: center;
    margin: 0px;
    font-family: Roboto, Helvetica, Arial, sans-serif;
    font-size: 3rem;
    line-height: 1.167;
    letter-spacing: 0em;
    text-align: center;
    font-weight: 700;
}

h3.banner-heading span {
    color: #6851ff !important;
}

.banner-sec {
    margin-top: 50px;
    margin-bottom: 150px;
}

.banner-sec img {
    width: 100%;
}

.intro-sec .intro-cards {
    display: flex;
    align-items: center;
    gap: 30px;
    background-color: #fff;
    background-color: rgb(255, 255, 255);
    color: rgba(0, 0, 0, 0.87);
    box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 1px -1px, rgba(0, 0, 0, 0.14) 0px 1px 1px 0px, rgba(0, 0, 0, 0.12) 0px 1px 3px 0px;
    transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1);
    overflow: hidden;
    border-radius: 20px;
    margin-bottom: 40px;
    padding: 50px 30px;
}

.intro-sec .intro-cards .intro-img img {
    width: 250px;
}

.intro-sec .intro-cards .intro-img {box-shadow: 0px 4px 5px 1px #0000001f;}

.intro-sec .intro-cards  h5 {
    font-size: 30px;
    line-height: 40px;
}

.intro-sec .intro-cards h5 span {
    color: #6851ff;
    font-weight: 400;
}

.meet-the-team_head h1 {font-size: 55px;line-height: 65px;text-align: center;}

.meet-the-team_head h1 span {
    color: #6851ff;
    font-weight: 400;
}

.meet-image-sec {
    display: flex;
}

.meet-the-team {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 50px;
    padding-block: 40px 50px;
}

.meet-the-team img {
    width: 170px;
    border-radius: 50%;
    aspect-ratio: 1/1;
    object-fit: cover;
    object-position: top;
    filter: drop-shadow(2px 4px 6px #ccc);
    display: table;
    margin: 0 auto;
}

.meet-image-sec h3 {
    font-size: 1.125rem;
    line-height: 1.75rem;
    text-align: center;
    font-weight: 700;
    margin-bottom: 0;
}

.meet-image-sec p {
    color: #6b7280;
    font-size: 14px;
    line-height: 25px;
    font-weight: 500;
    text-align: center;
}

.img-gallery-sec h1 {
    text-align: center;
    font-size: 55px;
    line-height: 60px;
}

.img-gallery-sec h1 span {
    color: #6851ff;
}

.img_grid-sec {
    max-width: 1200px;
    margin: 0px auto;
    display: grid;
    grid-template-columns: repeat(12, 1fr);
    grid-template-rows: repeat(14, 50px);
    gap: 15px;
}

.img_grid-sec .img-1 {
    background-image: url(/assets/images/12-a4329216.jpg);
    background-size: cover;
    background-position: center center;
    border-radius: 10px;
    grid-area: 4 / 1 / 7 / 5;
    transition: transform 0.3s;
}

.img_grid-sec .img-2 {
    background-image: url(/assets/images/2-7f019c59.jpg);
    background-size: cover;
    background-position: center center;
    border-radius: 10px;
    grid-area: 2 / 5 / 5 / 8;
    transition: transform 0.3s;
}
.img_grid-sec .img-3 {
    
    background-image: url(/assets/images/3-4a84e598.jpg);
    background-size: cover;
    background-position: center center;
    border-radius: 10px;
    grid-area: 1 / 8 / 5 / 12;
    transition: transform 0.3s;
}
.img_grid-sec .img-4 {
    
    background-image: url(/assets/images/4-3621ba3e.jpg);
    background-size: cover;
    background-position: center center;
    border-radius: 10px;
    grid-area: 7 / 1 / 10 / 5;
    transition: transform 0.3s;
}
.img_grid-sec .img-5 {
    background-image: url(/assets/images/5-90516f02.jpg);
    background-size: cover;
    background-position: center center;
    border-radius: 10px;
    grid-area: 5 / 5 / 10 / 10;
    transition: transform 0.3s;
}
.img_grid-sec .img-6 {
    background-image: url(/assets/images/6-fd72e5b8.jpg);
    background-size: cover;
    background-position: center center;
    border-radius: 10px;
    grid-area: 5 / 10 / 7 / 14;
    transition: transform 0.3s;
}
.img_grid-sec .img-7 {
    background-image: url(/assets/images/7-2a096583.jpg);
    background-size: cover;
    background-position: center center;
    border-radius: 10px;
    grid-area: 10 / 3 / 14 / 7;
    transition: transform 0.3s;
}


.img_grid-sec .img-8 {
    background-image: url(/assets/images/8-ea275e2c.jpg);
    background-size: cover;
    background-position: center center;
    border-radius: 10px;
    grid-area: 7 / 10 / 12 / 14;
    transition: transform 0.3s;
}

.img_grid-sec .img-9 {
    background-image: url(/assets/images/9-7bcc80b7.jpg);
    background-size: cover;
    background-position: center center;
    border-radius: 10px;
    grid-area: 10 / 7 / 14 / 10;
    transition: transform 0.3s;
}

.img_grid-sec .img-grid:hover {
    transform: scale(1.05);
    box-shadow: rgba(0, 0, 0, 0.2) 0px 10px 20px;
}

._footerWrapper {
    position: relative;
    background: linear-gradient(180deg, #4d3bdb 0%, #9747ff 100%);
    width: 100%;
    padding-block: 50px 10px;
}

footer .container-fluid {
    padding: 0;
}


.footer_container {
    max-width: 1200px;
    padding-left: 24px;
    padding-right: 24px;
    margin: 0 auto;
}

.footer-grid {
    box-sizing: border-box;
    display: flex;
    width: calc(100% + 40px);
    margin-left: -40px;
}

.footer-grid-item1 {
    flex-basis: 33.3333%;
    -webkit-box-flex: 0;
    flex-grow: 0;
    max-width: 33.3333%;
    padding-left: 40px;
}

.footer-grid-item2 {
    flex-basis: 66.6667%;
    -webkit-box-flex: 0;
    flex-grow: 0;
    max-width: 66.6667%;
    padding-left: 40px;
    display: flex;
    justify-content: flex-end;
}

.footer-grid-item2 .footer-grid-wrapper {
    -webkit-box-pack: end;
    justify-content: end !important;
}

.footer-grid-item-inn p {
    margin: 10px 0px 0px;
    font-family: Roboto, Helvetica, Arial, sans-serif;
    font-weight: 400;
    font-size: 1rem;
    line-height: 1.5;
    letter-spacing: 0.00938em;
    color: rgb(255, 255, 255);
}

.footer-grid-item-inn2 p {
    margin: 0px;
    font-family: Roboto, Helvetica, Arial, sans-serif;
    line-height: 1.5;
    letter-spacing: 0.00938em;
    color: rgb(255, 255, 255);
    font-weight: 600;
    font-size: 20px;
}

.footer-grid-item-inn2 {
    margin-top: 40px;
}

.footer-social i {
    font-size: 25px;
    color: #fff;
    width: 55px;
    height: 55px;
    line-height: 55px;
}

.footer-grid-wrapper ul {
    list-style: none;
    color: #fff;
}

.footer-grid-wrapper ul li {
    font-weight: 600;
    margin-bottom: 20px;
    cursor: auto;
    font-size: 16px;
    color: #fff;
}

.footer-grid-wrapper ul li a {
    color: #fff;
    text-decoration: unset;
}

.copyright-sec {
    text-align: center;
    color: #fff;
    border-top: 1px solid;
    padding-top: 10px;
}

.copyright-sec .copyright-inner {
    display: flex;
    justify-content: center;
    gap: 30px;
}

.copyright-sec .copyright-inner p {
    margin-bottom: 0;
}

.img_grid-sec {
    padding-top: 40px;
}
@media (min-width: 1024px) {
    .navbar-expand-custom {
      flex-wrap: nowrap;
    }
  
    .navbar-expand-custom .navbar-collapse {
      display: flex !important;
      flex-basis: auto;
    }
  
    .navbar-expand-custom .navbar-toggler {
      display: none;
    }
  }
  
  /* Mobile / Offcanvas (below 1024px) */
  @media (max-width: 1023px) {
    .navbar-expand-custom .navbar-collapse {
      display: none !important;
    }
  
    .navbar-expand-custom .navbar-toggler {
      display: block;
    }
  }

@media (max-width: 768px) {
    .container, .container-md, .container-sm {
        max-width: 768px;
        overflow: hidden;
    }

    .meet-image-sec {
        display: flex;
        flex: 1 1 46%;
        justify-content: center;
    }
    .meet-the-team {
        flex-wrap: wrap;
    }
    .intro-sec .intro-cards {
        flex-wrap: wrap;
        justify-content: center;
        text-align: center;
    }
}

@media (max-width: 576px){
    .footer-grid {
        flex-wrap: wrap;
    }
    
    .footer-grid-item1 {
        flex-basis: 100%;
        flex-grow: 1;
        max-width: 100%;
    }
    
    .footer-grid-wrapper ul {
        margin-left: 0 !important;
        padding-left: 0 !important;
    }
    .img-gallery-sec h1 {
        text-align: center;
        font-size: 35px;
        line-height: 30px;
    }
    .meet-the-team_head h1 {
        font-size: 35px;
        line-height: 45px;
        text-align: center;
        width: 70%;
        margin: 0 auto;
    }

    h3.banner-heading {
        font-size: 2rem;
        line-height: 1.167;
    }
    .banner-sec {
        margin-top: 50px;
        margin-bottom: 30px;
    }
    .intro-sec .intro-cards h5 {
        font-size: 20px;
        line-height: 30px;
        text-wrap: balance;
    }
}

